--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,9 @@ body {
   margin: 0;
   font-family: "Lato", sans-serif;
 }
+header {
+  text-align: center;
+}
 
 .container {
   margin: 30px auto;
