--- a/src/App.css
+++ b/src/App.css
@@ -143,8 +143,8 @@ input[type="number"] {
   padding: 2px 5px;
   position: absolute;
   top: 50%;
-  left: 0;
-  transform: translate(-100%, -50%);
+  right: 0;
+  transform: translate(100%, -50%);
   opacity: 0;
   transition: opacity 0.3s ease;
 }
